--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,5 +17,6 @@
 		<script src="./js/angular-route.min.js"></script>
 		<script src="./js/app.js"></script>
 		<script src="./js/styles.js"></script>
+		<script src="./js/controllers/home-controller.js"></script>
 	</body>
 </html>
