implemented routes and controllers

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,6 +17,11 @@
 		<script src="./js/angular-route.min.js"></script>
 		<script src="./js/app.js"></script>
 		<script src="./js/styles.js"></script>
+		<script src="./js/services/services.js"></script>
 		<script src="./js/controllers/home-controller.js"></script>
+		<script src="./js/controllers/login-controller.js"></script>
+		<script src="./js/controllers/signup-controller.js"></script>
+		<script src="./js/controllers/admin-users-controller.js"></script>
+		<script src="./js/controllers/user-profile-controller.js"></script>
 	</body>
 </html>
