--- a/frontend/public/pages/home.html
+++ b/frontend/public/pages/home.html
@@ -1,19 +1,19 @@
 <!-- Navbar -->
- <nav class="custom-navbar">
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="fa fa-bars"></i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="">Login</a></li>
-        <li><a href="">Signup</a></li>
-      </ul>
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="">Login</a></li>
-        <li><a href="">Signup</a></li>
-      </ul>
-    </div>
+<nav class="custom-navbar">
+	<div class="nav-wrapper">
+		<a href="#!" class="brand-logo">
+			<img src="images/MakersValley-New-Logo.png" class="navbar-logo">
+		</a>
+		<a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="fa fa-bars"></i></a>
+		<ul class="right hide-on-med-and-down">
+			<li><a href=""></a></li>
+		</ul>
+		<ul class="sidenav" id="mobile-demo">
+			<li><a href=""></a></li>
+		</ul>
+	</div>
 </nav>
-         
+
 
 <!-- Intro div -->
 <div class="carousel carousel-slider center home-intro-slider">
@@ -34,12 +34,10 @@
 		</section>
 	</div>
 </div>
-
 <!-- Main div -->
 <section class="projects-div">
 	<section class="row">
 		<section class="col m2"></section>
-
 		<section class="col m8 s12">
 			<section class="projects-row">
 				<h4 class="text-center">Projects</h4>
@@ -54,7 +52,6 @@
 							</section>
 						</a>
 					</section>
-
 					<section class="col s12 m4">
 						<a href="" >
 							<section class="projects-item">
@@ -64,7 +61,6 @@
 							</section>
 						</a>
 					</section>
-
 					<section class="col s12 m4">
 						<a href="" >
 							<section class="projects-item">
@@ -82,9 +78,9 @@
 </section>
 
 <!-- footer div -->
- <section class="footer-div" ng-cloak>
- 	<p class="text-center">Makers Valley. All Rights Reserved &copy; {{ thisYear}}.</p>
- </section>
+<section class="footer-div" ng-cloak>
+	<p class="text-center">Makers Valley. All Rights Reserved &copy; {{ thisYear}}.</p>
+</section>
 
 <!-- including js script to initialize panel and mobile side navs -->
 <script src="../js/styles.js"></script>
