--- a/frontend/public/pages/home.html
+++ b/frontend/public/pages/home.html
@@ -1,7 +1,7 @@
 <!-- Navbar -->
  <nav class="custom-navbar">
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Logo</a>
+        <a href="#" class="brand-logo">Logo</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="fa fa-bars"></i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="">Login</a></li>
@@ -27,8 +27,7 @@
 			<section class="col s12 m8">
 				<h5>About The BootCamp</h5>
 				<p class="white-text">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				</p>
+					Makers Valley boot camp brings together people from around the globe to improve their web development skillset to what is required in the tech industry. 
 			</section>
 			<section class="col m2"></section>
 		</section>
@@ -50,7 +49,7 @@
 							<section class="projects-item">
 								<img src="../images/demo-img.jpg" alt="image" class="projects-img"><br/>
 								<h6 class="text-center text-bold">Project 1</h6>
-								<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<p class="text-center">A chat system - First phase.</p>
 							</section>
 						</a>
 					</section>
@@ -60,7 +59,7 @@
 							<section class="projects-item">
 								<img src="../images/demo-img.jpg" alt="image" class="projects-img"><br/>
 								<h6 class="text-center text-bold">Project 2</h6>
-								<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<p class="text-center">A chat system - Second phase.</p>
 							</section>
 						</a>
 					</section>
@@ -70,7 +69,7 @@
 							<section class="projects-item">
 								<img src="../images/demo-img.jpg" alt="image" class="projects-img"><br/>
 								<h6 class="text-center text-bold">Project 3</h6>
-								<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+								<p class="text-center">Mobile App for MakersValley</p>
 							</section>
 						</a>
 					</section>
