--- a/frontend/public/pages/home.html
+++ b/frontend/public/pages/home.html
@@ -1,19 +1,4 @@
 <!-- Navbar -->
-<<<<<<< HEAD
- <nav class="custom-navbar">
-    <div class="nav-wrapper">
-        <a href="#" class="brand-logo">Logo</a>
-      <a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="fa fa-bars"></i></a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="">Login</a></li>
-        <li><a href="">Signup</a></li>
-      </ul>
-      <ul class="sidenav" id="mobile-demo">
-        <li><a href="">Login</a></li>
-        <li><a href="">Signup</a></li>
-      </ul>
-    </div>
-=======
 <nav class="custom-navbar">
 	<div class="nav-wrapper">
 		<a href="#!" class="brand-logo">
@@ -21,13 +6,12 @@
 		</a>
 		<a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="fa fa-bars"></i></a>
 		<ul class="right hide-on-med-and-down">
-			<li><a href=""></a></li>
+			<li><a href=""></a>Login</li>
 		</ul>
 		<ul class="sidenav" id="mobile-demo">
-			<li><a href=""></a></li>
+			<li><a href=""></a>Signup</li>
 		</ul>
 	</div>
->>>>>>> bb28447f92fbb92f88e25955a893df84c87df5f7
 </nav>
 
 
