--- a/frontend/public/pages/user-profile.html
+++ b/frontend/public/pages/user-profile.html
@@ -6,15 +6,17 @@
 		</a>
 		<a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="fa fa-bars"></i></a>
 		<ul class="right hide-on-med-and-down">
-			<li><a href=""></a></li>
+			<li><a href="">Home</a></li>
+			<li><a href="">Logout</a></li>
 		</ul>
 		<ul class="sidenav" id="mobile-demo">
-			<li><a href=""></a></li>
+			<li><a href="">Home</a></li>
+			<li><a href="">Logout</a></li>
 		</ul>
 	</div>
 </nav>
 
-<section class="row profile-row">
+<section class="row profile-row" ng-cloak>
 	<section class="col m4 l4"></section>
 	<section class="col m4 l4 s12">
 		
