--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -1,4 +1,4 @@
-<!-- Navbar 
+<!-- Navbar -->
 <nav class="custom-navbar">
 	<div class="nav-wrapper">
 		<a href="#!" class="brand-logo">
@@ -13,9 +13,7 @@
 		</ul>
 	</div>
 </nav>
--->
 
-<!DOCTYPE html>
 <html>
 <head>
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
