--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -115,7 +115,7 @@
     }
 
     .container {
-    background-color: lightgrey;
+    background-color: white;
     height: 407px;
     width: 420px;
     margin-top: 5px;
