--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -14,7 +14,40 @@
 	</div>
 </nav>
 
+<style type="text/css">
+#para1 {
+    text-align: center;
+    color:black;
+     font-family: 'Montserrat', sans-serif;
+    }
 
+	
+  .loginbtn{
+	background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 12px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    position: absolute;
+    left: 1370px;
+    top: 45px;
+    cursor: pointer;
+	
+    }
 
+	
+</style>	
+	
 
-<h1>this is the signup page</h1>
+<body>
+<button class="loginbtn">Login</button>
+	<br>
+	<br>
+    <h1 id="para1">Sign Up</h1>
+
+	
+</body>
