--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -15,6 +15,12 @@
 </nav>
 
 <style type="text/css">
+	
+button:hover {
+    background-color: #2E8B57;
+    }
+	
+	
 #para1 {
     text-align: center;
     color:black;
@@ -34,7 +40,7 @@
     font-family: 'Montserrat', sans-serif;
     position: absolute;
     left: 1370px;
-    top: 45px;
+    top: 38px;
     cursor: pointer;
 	
     }
