--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -44,6 +44,12 @@ button:hover {
     cursor: pointer;
 	
     }
+	
+ .center {
+	 text-align: center;
+	 font-size: 20px;
+	 font-family: 'Montserrat', sans-serif;
+    }	
 
 	
 </style>	
@@ -54,6 +60,7 @@ button:hover {
 	<br>
 	<br>
     <h1 id="para1">Sign Up</h1>
+<p class="center">Enter the information below to create your account </p>	
 
 	
 </body>
