--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -45,6 +45,25 @@ button:hover {
 	
     }
 	
+.contactinfo{
+   background-color: #2F4F4F;
+   height: 190px;
+
+   }
+
+   #last {
+	color:white;
+	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
+	text-indent: 90px; 
+   }
+
+   h2{
+	text-indent: 90px;
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+   }	
+	
  .center {
 	 text-align: center;
 	 font-size: 20px;
@@ -62,5 +81,19 @@ button:hover {
     <h1 id="para1">Sign Up</h1>
 <p class="center">Enter the information below to create your account </p>	
 
-	
+    <br>
+    <br>
+    <br>
+    <footer>
+    <div class="contactinfo">
+    	<br>
+    	<h2> Connect </h2>
+    	<p id="last">hello@makersvalley.net </p>
+        <br>
+        <p id="last">&copy; 2018 Copyright </p>
+   
+    </div>
+    </footer>
+    <br>
+    <br>	
 </body>
