--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -58,10 +58,11 @@ button:hover {
 	text-indent: 90px; 
    }
 
-   h3{
+   h2{
 	text-indent: 90px;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
+	font-size: 20px;   
    }	
 	
  .center {
@@ -87,7 +88,7 @@ button:hover {
     <footer>
     <div class="contactinfo">
     	<br>
-    	<h3> Connect </h3>
+    	<h2> Connect </h2>
     	<p id="last">hello@makersvalley.net </p>
         <br>
         <p id="last">&copy; 2018 Copyright </p>
