--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -87,8 +87,8 @@ button:hover {
     <br>
     <footer>
     <div class="contactinfo">
-	<br>
-    	<h2> Connect </h2>
+	
+        <p> <h2> Connect </h2> </p>
     	<p id="last">hello@makersvalley.net </p>
         <br>
         <p id="last">&copy; 2018 Copyright </p>
