--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -87,8 +87,9 @@ button:hover {
     <br>
     <footer>
     <div class="contactinfo">
-	
-        <p> <h2> Connect </h2> </p>
+	    <p></p>
+	    <p></p>
+         <h2> Connect </h2> 
     	<p id="last">hello@makersvalley.net </p>
         <br>
         <p id="last">&copy; 2018 Copyright </p>
