--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -45,6 +45,14 @@ button:hover {
 	
     }
 	
+
+   .placing {
+    position: absolute;
+    top: 529px;
+    left: 50px;
+ 
+   }	
+	
 .contactinfo{
    background-color: #2F4F4F;
    height: 190px;
@@ -87,11 +95,12 @@ button:hover {
     <br>
     <footer>
     <div class="contactinfo">
-	<br>    
+	<div class="placing">
          <h2> Connect </h2> 
     	<p id="last">hello@makersvalley.net </p>
         <br>
         <p id="last">&copy; 2018 Copyright </p>
+      </div>		
    
     </div>
     </footer>
