--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -14,6 +14,18 @@
 	</div>
 </nav>
 
+
+<!DOCTYPE html>
+<html>
+<head>
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+	<title>Login page</title>
+
+
+
 <style type="text/css">
    a:link {
     text-decoration: none;
@@ -141,7 +153,7 @@
 
 
 	</style>
-
+</head>
 
 <body>
 
@@ -185,3 +197,4 @@
     <br>
  
 </body>
+</html>
