--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -74,10 +74,12 @@
 
    input[type=email]:focus {
     border: 2px solid #4da6ff;
+	   width: 200px;
    }
 
    input[type=password]:focus {
     border: 2px solid #4da6ff;
+	    width: 200px;
    }
 
    input:hover {
@@ -161,10 +163,10 @@
     <div class="container" >
      <h2 id="para1">Login</h2>
      <div class="info">	
-	<input id= "email" type="email" name="e-mail" size="10" placeholder="Email" required>
+	<input id= "email" type="email" name="e-mail" size="46" placeholder="Email" required>
 	<br>
 	<br>
-	<input id= "passwd" type="password" name="password" size="10" placeholder="Password" required>
+	<input id= "passwd" type="password" name="password" size="46" placeholder="Password" required>
 
   </div>
 	
