--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -66,7 +66,13 @@
 	
     }
 
-
+  input[type="email"] {
+    width: 200px;
+  }
+	
+  input[type="password"] {
+    width: 200px;
+  }
 
   input[type=text]:focus {
     border: 2px solid #4da6ff;
@@ -74,12 +80,12 @@
 
    input[type=email]:focus {
     border: 2px solid #4da6ff;
-	   width: 200px;
+	   
    }
 
    input[type=password]:focus {
     border: 2px solid #4da6ff;
-	    width: 200px;
+	   
    }
 
    input:hover {
