--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -162,7 +162,7 @@
     <div class="container" >
      <h2 id="para1">Login</h2>
      <div class="info">	
-	<input id= "email" type="email" name="e-mail" size="46" placeholder="Email" required>
+	<input id= "email" type="email" name="e-mail" width="30" height="30" placeholder="Email" required>
 	<br>
 	<br>
 	<input id= "passwd" type="password" name="password" size="46" placeholder="Password" required>
