--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -162,10 +162,10 @@
     <div class="container" >
      <h2 id="para1">Login</h2>
      <div class="info">	
-	<input id= "email" type="email" name="e-mail" width="30" height="30" placeholder="Email" required>
+	<input id= "email" type="email" name="e-mail" placeholder="Email" required>
 	<br>
 	<br>
-	<input id= "passwd" type="password" name="password" size="66" placeholder="Password" required>
+	<input id= "passwd" type="password" name="password" placeholder="Password" required>
 
   </div>
 	
