--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -66,7 +66,11 @@
     cursor: pointer;
 	
     }
-
+	
+	
+    input[type=email] {
+     width: 50%;
+    }
 
   input[type=text]:focus {
     border: 2px solid #4da6ff;
@@ -152,6 +156,8 @@
     top: 420px;
     left: 830px;
     }
+	
+
 
 
 	</style>
