--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -70,7 +70,12 @@
 	
     input[type=email] {
      width: 50%;
-    }
+     padding: 12px 20px;
+     margin: 8px 0;
+    box-sizing: border-box;	    
+    
+}
+
 
   input[type=text]:focus {
     border: 2px solid #4da6ff;
