--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -68,13 +68,15 @@
     }
 	
 	
-    input {
-     width: 25%;
-     padding: 12px 20px;
-     margin: 8px 0;
-    box-sizing: border-box;	    
-    
-}
+	#email{
+	width:40%;
+	
+	}
+	
+	#passwd{
+	width:40%;
+	
+	}
 
 
   input[type=text]:focus {
