--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -40,6 +40,10 @@
     background-color: #2E8B57;
 
     }
+    
+    input::placeholder {
+    color: red;
+     }
 
 	#para1 {
     position: absolute;
@@ -69,7 +73,7 @@
 	
 	
 	#email{
-	width:70%;
+	width:50%;
         position: absolute;
         top:300px;
         left:300px;
