--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -70,7 +70,8 @@
 	
 	
 	#email{
-	width:20%;
+	width:24%;
+	padding: 12px 20px;
         position: absolute;
         top:250px;
         left:630px;
