--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -70,8 +70,8 @@
 	
 	
 	#email{
-	width:24%;
-	padding: 12px 20px;
+	width:22%;
+	padding: 5px;
         position: absolute;
         top:250px;
         left:630px;
