--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -71,7 +71,7 @@
 	
 	#email{
 	width:20%;
-	padding:-20px;
+        line-height: 8px; 
         position: absolute;
         top:250px;
         left:630px;
