--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -80,7 +80,11 @@
 	}
 	
 	#passwd{
-	width:70%;
+	width:20%;
+        height: 18px; 
+        position: absolute;
+        top:253px;
+        left:630px;
 	
 	}
 
