--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -129,7 +129,11 @@
 	text-indent: 90px;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 20px;   
+	font-size: 24px;  
+        position: absolute;
+        top: 200px;
+       
+	   
    }
 
    .center {
