--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -127,7 +127,7 @@
 
    h2{
 	text-indent: 90px;
-	color: white;
+	color: black;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 24px;  
         position: absolute;
