--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -127,11 +127,11 @@
 
    h2{
 	text-indent: 90px;
-	color: black;
+	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 24px;  
         position: absolute;
-        top: 600px;
+        top: 590px;
        
 	   
    }
