--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -123,6 +123,8 @@
 	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
 	text-indent: 90px; 
+	position: absolute;
+        top: 586px;  
    }
 
    h2{
@@ -131,7 +133,7 @@
 	font-family: 'Montserrat', sans-serif;
 	font-size: 24px;  
         position: absolute;
-        top: 586px;
+        top: 606px;
        
 	   
    }
