--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -127,6 +127,15 @@
         top: 646px;  
    }
 
+  #clast {
+	color:white;
+	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
+	text-indent: 90px; 
+	position: absolute;
+        top: 676px;  
+   }
+
    h2{
 	text-indent: 90px;
 	color: white;
@@ -221,7 +230,7 @@
     	<h2> Connect </h2>
     	<p id="last">hello@makersvalley.net </p>
         <br>
-        <p id="last">&copy; 2018 Copyright </p>
+        <p id="clast">&copy; 2018 Copyright </p>
    
     </div>
     </footer>
