--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -14,6 +14,15 @@
 	</div>
 </nav>
 
+<!DOCTYPE html>
+<html>
+<head>
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<!--Import materialize.css-->
+<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+
+	<title>Sign up page</title>
+
 <style type="text/css">
 	
 button:hover {
@@ -149,3 +158,4 @@ button:hover {
     <br>
     <br>	
 </body>
+</html>
