--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -31,9 +31,10 @@ button:hover {
 	
 	
 #para1 {
-    text-align: center;
+   
     color:black;
-     font-family: 'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    font-size:22px;
     }
 
 	
