--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -34,7 +34,9 @@ button:hover {
    
     color:black;
     font-family: 'Montserrat', sans-serif;
-    font-size:22px;
+    text-align: center;
+    font-size:26px;
+    font-weight: bold;
     }
 
 	
