--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -63,19 +63,35 @@ button:hover {
 
    }
 
-   #last {
+ #last {
 	color:white;
 	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
 	text-indent: 90px; 
+	position: absolute;
+        top: 646px;  
    }
-
+  #clast {
+	color:white;
+	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
+	text-indent: 90px; 
+	position: absolute;
+        top: 722px;  
+   }
    h2{
 	text-indent: 90px;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 24px;   
-   }	
+	font-size: 24px;  
+        position: absolute;
+        top: 586px;
+       
+	   
+   }
+
+
+
 	
  .center {
 	 text-align: center;
