--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -169,7 +169,7 @@ button:hover {
          <h2> Connect </h2> 
     	<p id="last">hello@makersvalley.net </p>
         <br>
-        <p id="last">&copy; 2018 Copyright </p>
+        <p id="clast">&copy; 2018 Copyright </p>
     		
    
     </div>
