--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -35,7 +35,7 @@ button:hover {
     color:black;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
-    font-size:32px;
+    font-size:36px;
     font-weight: bold;
     }
 
@@ -86,6 +86,7 @@ button:hover {
 	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 24px;  
+	font-weight: bold;   
         position: absolute;
         top: 586px;
        
