--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -83,7 +83,7 @@ button:hover {
 
    h2{
 	text-indent: 90px;
-	color: white;
+	color: black;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 24px;  
 	font-weight: bold;   
