--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -69,7 +69,7 @@ button:hover {
 	font-family: 'Montserrat', sans-serif;
 	text-indent: 90px; 
 	position: absolute;
-        top: 646px;  
+        top: 756px;  
    }
 
   #clast {
@@ -83,7 +83,7 @@ button:hover {
 
    h2{
 	text-indent: 90px;
-	color: black;
+	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 24px;  
 	font-weight: bold;   
