--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,7 @@
 		<script src="./js/services/services.js"></script>
 		<script src="./js/controllers/home-controller.js"></script>
 		<script src="./js/controllers/login-controller.js"></script>
+		<script src="./js/controllers/forgotpassword-controller.js"></script>
 		<script src="./js/controllers/signup-controller.js"></script>
 		<script src="./js/controllers/admin-users-controller.js"></script>
 		<script src="./js/controllers/user-profile-controller.js"></script>
