--- a/frontend/public/pages/forgotpassword.html
+++ b/frontend/public/pages/forgotpassword.html
@@ -46,6 +46,8 @@
     left:650px;
     color:black;
     font-family: 'Montserrat', sans-serif;
+    font-size:30px;
+    font-weight: bold;
     }
 
     img {
