--- a/frontend/public/pages/forgotpassword.html
+++ b/frontend/public/pages/forgotpassword.html
@@ -129,9 +129,11 @@
    }
 
    #email{
-    position: absolute;
-    top: 286px;
-    left: 603px;
+        width:20%;
+        height: 18px; 
+        position: absolute;
+        top:248px;
+        left:630px;
 
    }
 
