--- a/frontend/public/pages/forgotpassword.html
+++ b/frontend/public/pages/forgotpassword.html
@@ -116,11 +116,32 @@
    margin-left: 20px;
    }
 
-   #last {
+  #last {
 	color:white;
 	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
 	text-indent: 90px; 
+	position: absolute;
+        top: 796px;  
+   }
+  #clast {
+	color:white;
+	font-size: 18px;
+	font-family: 'Montserrat', sans-serif;
+	text-indent: 90px; 
+	position: absolute;
+        top: 885px;  
+   }
+   h2{
+	text-indent: 90px;
+	color: white;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 24px;  
+	font-weight: bold;   
+        position: absolute;
+        top: 736px;
+       
+	   
    }
 
    #email{
@@ -130,12 +151,6 @@
         top:292px;
         left:592px;
 
-   }
-
-   h2{
-	text-indent: 90px;
-	color: white;
-	font-family: 'Montserrat', sans-serif;
    }
 
    .center {
@@ -191,7 +206,7 @@
     	<h2> Connect </h2>
     	<p id="last">hello@makersvalley.net </p>
         <br>
-        <p id="last">&copy; 2018 Copyright </p>
+        <p id="clast">&copy; 2018 Copyright </p>
    
     </div>
     </footer>
