--- a/frontend/public/pages/forgotpassword.html
+++ b/frontend/public/pages/forgotpassword.html
@@ -139,6 +139,7 @@
 	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-size: 24px;  
+	font-weight:bold; 
         position: absolute;
         top: 586px;
    
