--- a/frontend/public/pages/login.html
+++ b/frontend/public/pages/login.html
@@ -140,7 +140,8 @@
 	text-indent: 90px;
 	color: white;
 	font-family: 'Montserrat', sans-serif;
-	font-size: 24px;  
+	font-size: 24px; 
+        font-weight:bold;  
         position: absolute;
         top: 586px;
        
