--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -126,6 +126,8 @@ button:hover {
     }	
 
     .one{
+    font-size: 20px;
+    color: black;    
     position: absolute;
     top: 309px;
     left: 620px;
