--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -25,7 +25,7 @@
 
 <style type="text/css">
 	
-button:hover {
+ button:hover {
     background-color: #2E8B57;
     }
 	
@@ -56,6 +56,14 @@ button:hover {
     cursor: pointer;
 	
     }
+
+  #first name{
+    width:20%;
+    height: 18px; 
+    position: absolute;
+    top:248px;
+    left:630px;
+	}	
 		
 .contactinfo{
    background-color: #2F4F4F;
