--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -57,13 +57,22 @@
 	
     }
 
-  #firstname{
+  #firstname {
     width:10%;
     height: 18px; 
     position: absolute;
-    top:260px;
+    top:300px;
     left:630px;
-	}	
+   }
+	
+
+   #lastname {
+    width:10%;
+    height: 18px; 
+    position: absolute;
+    top:300px;
+    left:650px;
+   }		
 		
 .contactinfo{
    background-color: #2F4F4F;
