--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -139,6 +139,9 @@
     font-size: 16px;
     font-family: 'Montserrat', sans-serif;
     cursor: pointer;
+    position: absolute;
+    top: 500px;
+    left: 620px;	     
 	
     }	
 
