--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -175,6 +175,12 @@
     <br>
 	<input id="firstname" type="text" placeholder="Firstname" name="firstname" required>
 	<input id="lastname" type="text" placeholder="Lastname" name="lastname" required>
+        <br>
+	<br>
+	<label for="email" class="two" ><b> Email </b></label>
+        <br>
+	<input id= "email" type="email" name="e-mail" size="46" placeholder="your email" required>
+
 	
 	
    <button class="signupbtn" type="submit">Sign up</button>
