--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -155,8 +155,10 @@
     }
 
       .two{
+    font-size: 20px;
+    color: black;  
     position: absolute;
-    top: 382px;
+    top: 329px;
     left: 620px;
     
     }	
