--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -72,7 +72,15 @@
     position: absolute;
     top:344px;
     left:782px;
-   }		
+   }	
+
+  #email {
+    width:20%;
+    height: 18px; 
+    position: absolute;
+    top:390px;
+    left:612px;
+   }	
 		
 .contactinfo{
    background-color: #2F4F4F;
@@ -158,7 +166,7 @@
     font-size: 20px;
     color: black;  
     position: absolute;
-    top: 329px;
+    top: 349px;
     left: 620px;
     
     }	
