--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -190,6 +190,12 @@
 	<label for="email" class="two" ><b> Email </b></label>
         <br>
 	<input id= "email" type="email" name="e-mail" size="46" placeholder="your email" required>
+        <br>
+	<br>
+	<label for="passwd" class="three" ><b> Password </b></label>
+        <br>
+	<input id= "passwd" type="password" name="password" size="46" pattern=".{6,}" required title="6 characters minimum">
+	<div id="error-length"></div>
 
 	
 	
