--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -80,6 +80,15 @@
     position: absolute;
     top:415px;
     left:612px;
+   }
+	
+	
+   #passwd {
+    width:21%;
+    height: 18px; 
+    position: absolute;
+    top:415px;
+    left:612px;
    }	
 		
 .contactinfo{
@@ -170,6 +179,14 @@
     left: 620px;
     
     }	
+
+     .three{
+    position: absolute;
+    top: 457px;
+    left: 620px;
+    }
+	
+
 </style>	
 </head>	
 
