--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -87,7 +87,7 @@
     width:21%;
     height: 18px; 
     position: absolute;
-    top:415px;
+    top:486px;
     left:612px;
    }	
 		
@@ -181,6 +181,8 @@
     }	
 
      .three{
+    font-size: 20px;
+    color: black; 
     position: absolute;
     top: 457px;
     left: 620px;
