--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -238,7 +238,10 @@
         <br>
 	<input id= "confmpasswd" type="password" size="46" name="cpassword" onkeyup="checkPass(); return false;">
 	<div id="error-nwl"></div>
-
+    <p style="font-size:90%;">
+	<input id="agree" type="checkbox" name="check">
+	I agree to the <a href="#" style="color:dodgerblue"> terms and conditions </a>.
+    </p>
 	
 	
    <button class="signupbtn" type="submit">Sign up</button>
