--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -25,6 +25,10 @@
 
 <style type="text/css">
 	
+   a:link {
+    text-decoration: underline;
+  }
+	
  button:hover {
     background-color: #2E8B57;
     }
