--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -140,6 +140,15 @@
 	   
    }
 	
+	
+    p {
+    position: absolute;
+    top:575px;
+    left:624px;
+
+
+     }	
+	
  .center {
 	 text-align: center;
 	 font-size: 20px;
