--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -141,12 +141,10 @@
    }
 	
 	
-    p {
+    #terms {
     position: absolute;
     top:575px;
     left:624px;
-
-
      }	
 	
  .center {
@@ -251,7 +249,7 @@
         <br>
 	<input id= "confmpasswd" type="password" size="46" name="cpassword" onkeyup="checkPass(); return false;">
 	<div id="error-nwl"></div>
-    <p style="font-size:90%;">
+    <p style="font-size:90%;" id="terms">
 	<input id="agree" type="checkbox" name="check">
 	I agree to the <a href="#" style="color:dodgerblue"> terms and conditions </a>.
     </p>
