--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -165,7 +165,7 @@
     }
 	
 	
-     .signupbtn, .cancelbtn{
+     .signupbtn{
 	background-color: #4CAF50; /* Green */
     border: none;
     color: white;
@@ -177,10 +177,27 @@
     font-family: 'Montserrat', sans-serif;
     cursor: pointer;
     position: absolute;
-    top: 700px;
-    left: 620px;	     
+    top: 680px;
+    left: 660px;	     
 	
-    }	
+    }
+	
+	.cancelbtn {
+	background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 12px 15px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+    position: absolute;
+    top: 680px;
+    left: 700px;
+
+	}
 
     .one{
     font-size: 20px;
