--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -103,6 +103,10 @@
     top:565px;
     left:612px;
    }
+	
+  #agree {
+	 background-color: #2196F3;
+	}	
 		
 .contactinfo{
    background-color: #2F4F4F;
