--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -266,7 +266,7 @@
 	<input id= "confmpasswd" type="password" size="46" name="cpassword" onkeyup="checkPass(); return false;">
 	<div id="error-nwl"></div>
     <p style="font-size:90%;" id="terms">
-	<input id="agree" type="checkbox" name="check"/>
+    <input id="agree" type="checkbox" name="check">
 	I agree to the <a href="#" style="color:dodgerblue"> terms and conditions </a>.
     </p>
 	
