--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -29,7 +29,40 @@
     text-decoration: underline;
   }
 	
- button:hover {
+input[type="checkbox"] {
+
+  -webkit-appearance: none !important;
+
+  -moz-appearance: none !important;
+
+  appearance: none !important;
+
+  display: inline-block;
+
+  position: relative;
+
+  background-color: #dde1e2;
+
+  border-radius: 6px;
+
+ 
+
+   /*padding: 4px;*/
+   padding-top: 2px;
+
+  margin-bottom: -2px;
+
+ 
+
+  cursor: pointer;
+
+  height: 12px;
+
+  width: 12px;
+
+}
+ 
+    button:hover {
     background-color: #2E8B57;
     }
 	
