--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -30,6 +30,17 @@
   }
 	
 input[type="checkbox"] {
+-webkit-appearance: none !important;
+
+  -moz-appearance: none !important;
+
+  appearance: none !important;
+
+  display: inline-block;
+
+  position: relative;
+
+ background-color: #dde1e2;
  height: 12px;
   width: 12px;
 
