--- a/frontend/public/pages/home.html
+++ b/frontend/public/pages/home.html
@@ -6,10 +6,10 @@
 		</a>
 		<a href="#" data-target="mobile-demo" class="sidenav-trigger button-collapse"><i class="fa fa-bars"></i></a>
 		<ul class="right hide-on-med-and-down">
-			<li><a href=""></a>Login</li>
+			<li><a href="#login"></a>Login</li>
 		</ul>
 		<ul class="sidenav" id="mobile-demo">
-			<li><a href=""></a>Signup</li>
+			<li><a href="#signup"></a>Signup</li>
 		</ul>
 	</div>
 </nav>
