--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -1,4 +1,4 @@
-<!-- Navbar -->
+<!-- Navbar 
 <nav class="custom-navbar">
 	<div class="nav-wrapper">
 		<a href="#!" class="brand-logo">
@@ -58,17 +58,17 @@
     </div>
     <div class="col l4"></div>
 </div>
-
-<!-- <!DOCTYPE html>
+-->
+ <!DOCTYPE html>
 <html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
 <!--Import materialize.css-->
-<!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+ <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-	<title>Sign up page</title> -->
+	<title>Sign up page</title> 
 
-<!-- <style type="text/css">
+ <style type="text/css">
 	
    a:link {
     text-decoration: underline;
@@ -282,8 +282,8 @@ input[type="checkbox"] {
     }
 	
 
-</style> -->	
-<!-- </head>	
+</style> 
+ </head>	
 
 <body>
 <button class="loginbtn">Login</button>
@@ -342,4 +342,4 @@ input[type="checkbox"] {
     <br>
     <br>	
 </body>
-</html> -->
+</html> 
