--- a/frontend/public/pages/signup.html
+++ b/frontend/public/pages/signup.html
@@ -15,7 +15,7 @@
 		</ul>
 	</div>
 </nav>
-<!--
+
 <div class="row">
     <div class="col l4"></div>
     <div class="col l4 user-form">
@@ -57,15 +57,15 @@
         </form>
     </div>
     <div class="col l4"></div>
-</div>  -->
-
+</div>  
+<!--
  <!DOCTYPE html>
 <html>
 <head>
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
-<!--Import materialize.css -->
- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>  
-
+<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> -->
+<!--Import materialize.css 
+ <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>  -->
+<!--
 	<title>Sign up page</title> 
 
  <style type="text/css">
@@ -343,3 +343,4 @@ input[type="checkbox"] {
     <br>	
 </body>
 </html> 
+-->
